client/app/ingredient.grammar.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = "de",
      peg$c1 = peg$literalExpectation("de", false),
      peg$c2 = "d'",
      peg$c3 = peg$literalExpectation("d'", false),
      peg$c4 = function(amount, unit, container, ingredient, type) {
          var result = {
              quantity: amount,
              container: container,
              name: ingredient,
              unit: unit,
              type: type
          };

      for(var i in result) {
          if(result[i] === null || result[i] === undefined) {
              delete result[i];
          }
      }

      return result;
      },
      peg$c5 = "(",
      peg$c6 = peg$literalExpectation("(", false),
      peg$c7 = ")",
      peg$c8 = peg$literalExpectation(")", false),
      peg$c9 = function(amount, unit) {
          return { quantity: amount, unit: unit };
      },
      peg$c10 = ",",
      peg$c11 = peg$literalExpectation(",", false),
      peg$c12 = function(phrase) {
          return phrase;
      },
      peg$c13 = " ",
      peg$c14 = peg$literalExpectation(" ", false),
      peg$c15 = /^[\t]/,
      peg$c16 = peg$classExpectation(["\t"], false, false),
      peg$c17 = function(letters) { return letters.join(''); },
      peg$c18 = /^[.]/,
      peg$c19 = peg$classExpectation(["."], false, false),
      peg$c20 = /^[\/]/,
      peg$c21 = peg$classExpectation(["/"], false, false),
      peg$c22 = /^[0-9]/,
      peg$c23 = peg$classExpectation([["0", "9"]], false, false),
      peg$c24 = function(digits) { return digits.join(''); },
      peg$c25 = /^[a-zA-Z0-9\xE0\xC0\xE2\xC2\xE4\xC4\xE8\xC8\xEA\xCA\xEB\xCB\xE9\xC9\xEE\xCE\xEF\xCF\xF4\xD4\xF6\xD6\xF9\xD9\xFC\xDC\xFB\xDB\xE7\xC7\-'\u2019.%]/,
      peg$c26 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "\xE0", "\xC0", "\xE2", "\xC2", "\xE4", "\xC4", "\xE8", "\xC8", "\xEA", "\xCA", "\xEB", "\xCB", "\xE9", "\xC9", "\xEE", "\xCE", "\xEF", "\xCF", "\xF4", "\xD4", "\xF6", "\xD6", "\xF9", "\xD9", "\xFC", "\xDC", "\xFB", "\xDB", "\xE7", "\xC7", "-", "'", "\u2019", ".", "%"], false, false),
      peg$c27 = function(english_unit) { return english_unit; },
      peg$c28 = function(metric_unit) { return metric_unit; },
      peg$c29 = function(imprecise_unit) { return imprecise_unit; },
      peg$c30 = function() { return 'cup'; },
      peg$c31 = function() { return 'fluid_ounce'; },
      peg$c32 = function() { return 'gallon'; },
      peg$c33 = function() { return 'ounce'; },
      peg$c34 = function() { return 'pint'; },
      peg$c35 = function() { return 'pound'; },
      peg$c36 = function() { return 'quart'; },
      peg$c37 = function() { return 'tbsp'; },
      peg$c38 = function() { return 'tsp'; },
      peg$c39 = "cups",
      peg$c40 = peg$literalExpectation("cups", true),
      peg$c41 = "cup",
      peg$c42 = peg$literalExpectation("cup", true),
      peg$c43 = "tasses",
      peg$c44 = peg$literalExpectation("tasses", true),
      peg$c45 = "tasse",
      peg$c46 = peg$literalExpectation("tasse", true),
      peg$c47 = "fluid",
      peg$c48 = peg$literalExpectation("fluid", true),
      peg$c49 = "fl",
      peg$c50 = peg$literalExpectation("fl", true),
      peg$c51 = ".",
      peg$c52 = peg$literalExpectation(".", false),
      peg$c53 = "gallons",
      peg$c54 = peg$literalExpectation("gallons", true),
      peg$c55 = "gallon",
      peg$c56 = peg$literalExpectation("gallon", true),
      peg$c57 = "gal.",
      peg$c58 = peg$literalExpectation("gal.", true),
      peg$c59 = "gal",
      peg$c60 = peg$literalExpectation("gal", true),
      peg$c61 = "ounces",
      peg$c62 = peg$literalExpectation("ounces", true),
      peg$c63 = "ounce",
      peg$c64 = peg$literalExpectation("ounce", true),
      peg$c65 = "oz.",
      peg$c66 = peg$literalExpectation("oz.", true),
      peg$c67 = "oz",
      peg$c68 = peg$literalExpectation("oz", true),
      peg$c69 = "onces",
      peg$c70 = peg$literalExpectation("onces", true),
      peg$c71 = "once",
      peg$c72 = peg$literalExpectation("once", true),
      peg$c73 = "pints",
      peg$c74 = peg$literalExpectation("pints", true),
      peg$c75 = "pint",
      peg$c76 = peg$literalExpectation("pint", true),
      peg$c77 = "pt.",
      peg$c78 = peg$literalExpectation("pt.", true),
      peg$c79 = "pt",
      peg$c80 = peg$literalExpectation("pt", true),
      peg$c81 = "pounds",
      peg$c82 = peg$literalExpectation("pounds", true),
      peg$c83 = "pound",
      peg$c84 = peg$literalExpectation("pound", true),
      peg$c85 = "lbs.",
      peg$c86 = peg$literalExpectation("lbs.", true),
      peg$c87 = "lbs",
      peg$c88 = peg$literalExpectation("lbs", true),
      peg$c89 = "lb.",
      peg$c90 = peg$literalExpectation("lb.", true),
      peg$c91 = "lb",
      peg$c92 = peg$literalExpectation("lb", true),
      peg$c93 = "livres",
      peg$c94 = peg$literalExpectation("livres", true),
      peg$c95 = "livre",
      peg$c96 = peg$literalExpectation("livre", true),
      peg$c97 = "quarts",
      peg$c98 = peg$literalExpectation("quarts", true),
      peg$c99 = "quart",
      peg$c100 = peg$literalExpectation("quart", true),
      peg$c101 = "qts.",
      peg$c102 = peg$literalExpectation("qts.", true),
      peg$c103 = "qts",
      peg$c104 = peg$literalExpectation("qts", true),
      peg$c105 = "qt.",
      peg$c106 = peg$literalExpectation("qt.", true),
      peg$c107 = "qt",
      peg$c108 = peg$literalExpectation("qt", true),
      peg$c109 = "tablespoons",
      peg$c110 = peg$literalExpectation("tablespoons", true),
      peg$c111 = "tablespoon",
      peg$c112 = peg$literalExpectation("tablespoon", true),
      peg$c113 = "tbsp.",
      peg$c114 = peg$literalExpectation("tbsp.", true),
      peg$c115 = "tbsp",
      peg$c116 = peg$literalExpectation("tbsp", true),
      peg$c117 = "tbs.",
      peg$c118 = peg$literalExpectation("tbs.", true),
      peg$c119 = "tbs",
      peg$c120 = peg$literalExpectation("tbs", true),
      peg$c121 = "T.",
      peg$c122 = peg$literalExpectation("T.", false),
      peg$c123 = "T",
      peg$c124 = peg$literalExpectation("T", false),
      peg$c125 = "c. \xE0 s.",
      peg$c126 = peg$literalExpectation("c. \xE0 s.", false),
      peg$c127 = "c. \xE0 soupe",
      peg$c128 = peg$literalExpectation("c. \xE0 soupe", false),
      peg$c129 = "teaspoons",
      peg$c130 = peg$literalExpectation("teaspoons", true),
      peg$c131 = "teaspoon",
      peg$c132 = peg$literalExpectation("teaspoon", true),
      peg$c133 = "tsp.",
      peg$c134 = peg$literalExpectation("tsp.", true),
      peg$c135 = "tsp",
      peg$c136 = peg$literalExpectation("tsp", true),
      peg$c137 = "t.",
      peg$c138 = peg$literalExpectation("t.", false),
      peg$c139 = "t",
      peg$c140 = peg$literalExpectation("t", false),
      peg$c141 = "c. \xE0 c.",
      peg$c142 = peg$literalExpectation("c. \xE0 c.", true),
      peg$c143 = "c. \xE0 caf\xE9",
      peg$c144 = peg$literalExpectation("c. \xE0 caf\xE9", true),
      peg$c145 = "c. \xE0 th\xE9",
      peg$c146 = peg$literalExpectation("c. \xE0 th\xE9", true),
      peg$c147 = "c \xE0 th\xE9",
      peg$c148 = peg$literalExpectation("c \xE0 th\xE9", true),
      peg$c149 = "cuill\xE8res \xE0 caf\xE9",
      peg$c150 = peg$literalExpectation("cuill\xE8res \xE0 caf\xE9", true),
      peg$c151 = "cuill\xE8re \xE0 caf\xE9",
      peg$c152 = peg$literalExpectation("cuill\xE8re \xE0 caf\xE9", true),
      peg$c153 = "cuill\xE8res \xE0 th\xE9",
      peg$c154 = peg$literalExpectation("cuill\xE8res \xE0 th\xE9", true),
      peg$c155 = "cuill\xE8re \xE0 th\xE9",
      peg$c156 = peg$literalExpectation("cuill\xE8re \xE0 th\xE9", true),
      peg$c157 = function() { return 'g'; },
      peg$c158 = function() { return 'kg'; },
      peg$c159 = function() { return 'l'; },
      peg$c160 = function() { return 'dl'; },
      peg$c161 = function() { return 'cl'; },
      peg$c162 = function() { return 'mg'; },
      peg$c163 = function() { return 'ml'; },
      peg$c164 = "grams",
      peg$c165 = peg$literalExpectation("grams", true),
      peg$c166 = "grammes",
      peg$c167 = peg$literalExpectation("grammes", true),
      peg$c168 = "gramme",
      peg$c169 = peg$literalExpectation("gramme", true),
      peg$c170 = "gram",
      peg$c171 = peg$literalExpectation("gram", true),
      peg$c172 = "gr.",
      peg$c173 = peg$literalExpectation("gr.", true),
      peg$c174 = "gr",
      peg$c175 = peg$literalExpectation("gr", true),
      peg$c176 = "g.",
      peg$c177 = peg$literalExpectation("g.", true),
      peg$c178 = "g",
      peg$c179 = peg$literalExpectation("g", true),
      peg$c180 = "kilograms",
      peg$c181 = peg$literalExpectation("kilograms", true),
      peg$c182 = "kilogram",
      peg$c183 = peg$literalExpectation("kilogram", true),
      peg$c184 = "kg.",
      peg$c185 = peg$literalExpectation("kg.", true),
      peg$c186 = "kg",
      peg$c187 = peg$literalExpectation("kg", true),
      peg$c188 = "kilogrammes",
      peg$c189 = peg$literalExpectation("kilogrammes", true),
      peg$c190 = "kilogramme",
      peg$c191 = peg$literalExpectation("kilogramme", true),
      peg$c192 = "liters",
      peg$c193 = peg$literalExpectation("liters", true),
      peg$c194 = "liter",
      peg$c195 = peg$literalExpectation("liter", true),
      peg$c196 = "litres",
      peg$c197 = peg$literalExpectation("litres", true),
      peg$c198 = "litre",
      peg$c199 = peg$literalExpectation("litre", true),
      peg$c200 = "l.",
      peg$c201 = peg$literalExpectation("l.", true),
      peg$c202 = "l",
      peg$c203 = peg$literalExpectation("l", true),
      peg$c204 = "deciliters",
      peg$c205 = peg$literalExpectation("deciliters", true),
      peg$c206 = "deciliter",
      peg$c207 = peg$literalExpectation("deciliter", true),
      peg$c208 = "dl.",
      peg$c209 = peg$literalExpectation("dl.", true),
      peg$c210 = "dl",
      peg$c211 = peg$literalExpectation("dl", true),
      peg$c212 = "d\xE9cilitres",
      peg$c213 = peg$literalExpectation("d\xE9cilitres", true),
      peg$c214 = "d\xE9cilitre",
      peg$c215 = peg$literalExpectation("d\xE9cilitre", true),
      peg$c216 = "centiliters",
      peg$c217 = peg$literalExpectation("centiliters", true),
      peg$c218 = "centiliter",
      peg$c219 = peg$literalExpectation("centiliter", true),
      peg$c220 = "cl.",
      peg$c221 = peg$literalExpectation("cl.", true),
      peg$c222 = "cl",
      peg$c223 = peg$literalExpectation("cl", true),
      peg$c224 = "centilitres",
      peg$c225 = peg$literalExpectation("centilitres", true),
      peg$c226 = "centilitre",
      peg$c227 = peg$literalExpectation("centilitre", true),
      peg$c228 = "milligrams",
      peg$c229 = peg$literalExpectation("milligrams", true),
      peg$c230 = "milligram",
      peg$c231 = peg$literalExpectation("milligram", true),
      peg$c232 = "mg.",
      peg$c233 = peg$literalExpectation("mg.", true),
      peg$c234 = "mg",
      peg$c235 = peg$literalExpectation("mg", true),
      peg$c236 = "milligrammes",
      peg$c237 = peg$literalExpectation("milligrammes", true),
      peg$c238 = "milligramme",
      peg$c239 = peg$literalExpectation("milligramme", true),
      peg$c240 = "milliliters",
      peg$c241 = peg$literalExpectation("milliliters", true),
      peg$c242 = "milliliter",
      peg$c243 = peg$literalExpectation("milliliter", true),
      peg$c244 = "ml.",
      peg$c245 = peg$literalExpectation("ml.", true),
      peg$c246 = "ml",
      peg$c247 = peg$literalExpectation("ml", true),
      peg$c248 = "millilitres",
      peg$c249 = peg$literalExpectation("millilitres", true),
      peg$c250 = "millilitre",
      peg$c251 = peg$literalExpectation("millilitre", true),
      peg$c252 = function() { return 'handful'; },
      peg$c253 = function() { return 'pinch'; },
      peg$c254 = function() { return 'touch'; },
      peg$c255 = function() { return 'box'; },
      peg$c256 = function() { return 'tablet' },
      peg$c257 = function() { return 'bit' },
      peg$c258 = function() { return 'packet' },
      peg$c259 = "bo\xEEtes",
      peg$c260 = peg$literalExpectation("bo\xEEtes", true),
      peg$c261 = "bo\xEEte",
      peg$c262 = peg$literalExpectation("bo\xEEte", true),
      peg$c263 = "boites",
      peg$c264 = peg$literalExpectation("boites", true),
      peg$c265 = "boite",
      peg$c266 = peg$literalExpectation("boite", true),
      peg$c267 = "contenants",
      peg$c268 = peg$literalExpectation("contenants", true),
      peg$c269 = "contenant",
      peg$c270 = peg$literalExpectation("contenant", true),
      peg$c271 = "dashes",
      peg$c272 = peg$literalExpectation("dashes", true),
      peg$c273 = "dash",
      peg$c274 = peg$literalExpectation("dash", true),
      peg$c275 = "handfuls",
      peg$c276 = peg$literalExpectation("handfuls", true),
      peg$c277 = "handful",
      peg$c278 = peg$literalExpectation("handful", true),
      peg$c279 = "poign\xE9es",
      peg$c280 = peg$literalExpectation("poign\xE9es", true),
      peg$c281 = "poign\xE9e",
      peg$c282 = peg$literalExpectation("poign\xE9e", true),
      peg$c283 = "tablets",
      peg$c284 = peg$literalExpectation("tablets", true),
      peg$c285 = "tablettes",
      peg$c286 = peg$literalExpectation("tablettes", true),
      peg$c287 = "tablette",
      peg$c288 = peg$literalExpectation("tablette", true),
      peg$c289 = "tablet",
      peg$c290 = peg$literalExpectation("tablet", true),
      peg$c291 = "morceaux",
      peg$c292 = peg$literalExpectation("morceaux", true),
      peg$c293 = "morceau",
      peg$c294 = peg$literalExpectation("morceau", true),
      peg$c295 = "sachets",
      peg$c296 = peg$literalExpectation("sachets", true),
      peg$c297 = "sachet",
      peg$c298 = peg$literalExpectation("sachet", true),
      peg$c299 = "pinches",
      peg$c300 = peg$literalExpectation("pinches", true),
      peg$c301 = "pinch",
      peg$c302 = peg$literalExpectation("pinch", true),
      peg$c303 = "pinc\xE9es",
      peg$c304 = peg$literalExpectation("pinc\xE9es", true),
      peg$c305 = "pinc\xE9e",
      peg$c306 = peg$literalExpectation("pinc\xE9e", true),
      peg$c307 = "touches",
      peg$c308 = peg$literalExpectation("touches", true),
      peg$c309 = "touch",
      peg$c310 = peg$literalExpectation("touch", true),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parseingredient_addition();

    return s0;
  }

  function peg$parseingredient_additions() {
    var s0, s1;

    s0 = [];
    s1 = peg$parseingredient_addition();
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parseingredient_addition();
      }
    } else {
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseingredient_addition() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;
